# lyt

./: Cargo.toml  README.md  flake.nix
src/: app.rs  main.rs
src/image_handler/: decoder.rs  errors.rs  image_handler.rs  image_meta.rs  mod.rs
src/ui/: mod.rs  viewer.rs  welcome.rs
