[package]
name = "lyt"
version = "0.0.1"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"] }
infer = "0.19.0"
memmap2 = "0.9.10"
rfd = {version ="0.17.2", features = ["xdg-portal"]}
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
zune-core = "0.5.1"
zune-image = { version = "0.5", default-features = true, features = ["all"] }
zune-jpeg = "0.5.12"
zune-png = "0.5.1"
egui = "0.33.3"


[profile.release]
opt-level = 3  # or "3" for max
lto = true        # link-time optimization
codegen-units = 1 # better optimization for whole crate
panic = "abort"
# [profile.dev.package.zune-jpeg]
# opt-level = 3
